--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,3 +1,15 @@
 body {
-    background-color: aqua;
+    background-color: dimgray;
+  }
+
+text {
+  color: azure;
+}
+  
+.App {
+  border: 3px solid;
+  border-color: black;
+  border-radius: 3px;
+  max-height: auto;
+  max-width: 600px;
   }
