--- a/src/style/style.css
+++ b/src/style/style.css
@@ -15,6 +15,24 @@ text {
 }
 
 div {
-  border-color: yellowgreen;
+  border: 5px;
+  border-color: black;
   border-radius: 3px;
+  margin: 10px;
 }
+.App {
+  text-align: center;
+}
+
+/* .navbar {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+} */
+
+
