--- a/src/style/style.css
+++ b/src/style/style.css
@@ -20,19 +20,15 @@ div {
   border-radius: 3px;
   margin: 10px;
 }
+
 .App {
   text-align: center;
+  /* display: inline-block; */
 }
 
 /* .navbar {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: inline-block;
+  border-color: blue;
 } */
 
 
