--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,15 +1,15 @@
 
 body {
-   /* background-image: url("backgfx.jpg"); */
+   /* background-image: url('~~../src/img/backgfx.jpg'); */
 }
 
 
 text {
-  color: azure;
+  color: black;
 }
 
 #App {
-  border-radius: 3px;
+  border-radius: 5px;
   max-height: auto;
   max-width: auto;
   text-align: center;
@@ -29,12 +29,39 @@ text {
 
 #navbar {
   position: fixed;
+  width: 150x;
+  height: 180px;
   margin-top: 50px;
+  border-radius: 3px;
+  display: block;
+  padding: 20px;
   background-color: #333;
   text-align: center;
-  font-size: large;
   float: left;
   overflow: hidden;
   position: fixed; 
   top: 0; 
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.50);
+}
+
+#header {
+  background-color: aliceblue;
+}
+
+.navbutton {
+  background-color: #4CAF50;
+  width: 120px;
+  border: 4px;
+  border-color: black;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  font-size: 16px;
+}
+
+.navbutton:hover {
+  background-color: yellow;
+  box-shadow: 0 12px 16px 0 rgb(248, 246, 246), 0 17px 50px 0 rgb(255, 255, 255);
+  text-decoration: dashed;
+  color: black;
 }
