--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,6 @@ body {
    /* background-image: url('~~../src/img/backgfx.jpg'); */
 }
 
-
 text {
   color: black;
 }
@@ -13,25 +12,26 @@ text {
   max-height: auto;
   max-width: auto;
   text-align: center;
-  background-color: cornflowerblue;
+  background-color: rgba(72, 108, 175, 0.651);
+  /* background-image: url('./src/img/backgfx.jpg');? */
 }
 
 .mem {
+  color: aliceblue;
   border: 200px;
   border-color: black;
   border-radius: 3px;
   margin: 10px;
-  margin-left: 200px;
-  margin-right: 200px;
-  background-color: blueviolet;
+  margin-left: 160px;
+  margin-right: 160px;
+  background-color: rgba(0, 0, 0, 0.616);
 }
-
 
 #navbar {
   position: fixed;
   width: 150x;
   height: 180px;
-  margin-top: 50px;
+  margin-top: 58px;
   border-radius: 3px;
   display: block;
   padding: 20px;
@@ -41,15 +41,16 @@ text {
   overflow: hidden;
   position: fixed; 
   top: 0; 
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.50);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.418), 0 12px 20px 0 rgba(0,0,0,0.50);
 }
 
 #header {
-  background-color: aliceblue;
+  background-color: rgb(28, 69, 105);
+  border: 6px solid rgb(88, 91, 255);
 }
 
 .navbutton {
-  background-color: #4CAF50;
+  background-color: #1fa4cc;
   width: 120px;
   border: 4px;
   border-color: black;
@@ -57,11 +58,26 @@ text {
   padding: 15px 32px;
   text-align: center;
   font-size: 16px;
+  border: 1px solid grey
 }
 
 .navbutton:hover {
-  background-color: yellow;
-  box-shadow: 0 12px 16px 0 rgb(248, 246, 246), 0 17px 50px 0 rgb(255, 255, 255);
+  background-color: rgb(107, 202, 194);
+  box-shadow: 0 2px 10px 0 rgb(248, 246, 246), 0 5px 12px 0 rgba(255, 255, 255, 0.247);
   text-decoration: dashed;
+  color: rgb(10, 17, 104);
+  border: 1px solid rgb(10, 17, 104);
+  cursor: pointer;
+}
+
+#main:focus {
+  color: black;
+}
+
+#cold:focus {
+  color: black;
+}
+
+#hot:focus {
   color: black;
 }
