--- a/src/style.css
+++ b/src/style.css
@@ -25,6 +25,7 @@ text {
   margin-left: 160px;
   margin-right: 160px;
   background-color: rgba(0, 0, 0, 0.616);
+  padding: 5px;
 }
 
 #navbar {
@@ -47,6 +48,10 @@ text {
 #header {
   background-color: rgb(28, 69, 105);
   border: 6px solid rgb(88, 91, 255);
+}
+
+#content {
+  background-color: rgba(14, 68, 138, 0.349);
 }
 
 .navbutton {
@@ -80,4 +85,9 @@ text {
 
 #hot:focus {
   color: black;
+}
+
+.vote {
+  color: aquamarine;
+  background-color: #333;
 }
