--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@ text {
 #App {
   border-radius: 5px;
   max-height: auto;
+  min-height: 1000px;
   max-width: auto;
   text-align: center;
   background-image: url('~~../src/img/cover.jpg');
@@ -76,7 +77,7 @@ text {
 }
 
 #welcome_text {
-  color: antiquewhite;
+  color: rgb(10, 6, 15);
   font-size: 48px;
   font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-feature-settings: "aalt";
