--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@ text {
 #App {
   border-radius: 5px;
   max-height: auto;
-  min-height: 1000px;
+  /* min-height: 1000px; */
   max-width: auto;
   text-align: center;
   background-image: url('~~../src/img/cover.jpg');
