--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,6 @@ text {
 #App {
   border-radius: 5px;
   max-height: auto;
-  /* min-height: 1000px; */
   max-width: auto;
   text-align: center;
   background-image: url('~~../src/img/cover.jpg');
@@ -53,8 +52,6 @@ text {
 }
 
 #header {
-  /* background-color: rgb(28, 69, 105); */
-  /* border: 6px solid rgb(96, 101, 243); */
   width: 800px;
   margin-left: auto;
   margin-right: auto;
@@ -69,11 +66,7 @@ text {
     rgba(0, 0, 0, 0.37), 
     rgb(0, 0, 0)
   ) 1 100%;
-  /* border-image: linear-gradient( 
-  [ <right> | to <left> ,]? <black> [, <white>]+ ); */
-
   box-shadow: 0px 3px rgb(0, 0, 0), -0.8em 0 3em rgb(0, 0, 0);
-  box-shadow: -0.8em 1 3em rgb(247, 245, 245), 0px 3px rgb(0, 0, 0);
 }
 
 #welcome_text {
@@ -84,8 +77,8 @@ text {
 }
 
 #content {
-  /* background-color: rgba(14, 68, 138, 0.349); */
   width: 800px;
+  min-height: 1000px;
   margin-left: auto;
   margin-right: auto;
   border: 1px solid rgb(177, 177, 180);
@@ -96,9 +89,6 @@ text {
     rgba(0, 0, 0, 0.37), 
     rgb(0, 0, 0)
   ) 1 100%;
-  /* border-image: linear-gradient( 
-  [ <right> | to <left> ,]? <black> [, <white>]+ ); */
-  /* box-shadow: 20px 20px 50px 10px pink inset;  */
   box-shadow:  0px 3px rgb(0, 0, 0), -0.8em 0 3em rgb(0, 0, 0);
 }
 
