--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,11 @@
 
 body {
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
-   /* background-color: rgba(3, 10, 22, 0.966); */
-}
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    background-image: url('~~../src/img/cover.jpg');
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+  }
+
 
 text {
   color: black;
@@ -13,7 +16,7 @@ text {
   max-height: auto;
   max-width: auto;
   text-align: center;
-  background-image: url('~~../src/img/cover.jpg');
+  /* background-image: url('~~../src/img/cover.jpg'); */
   background-repeat: no-repeat;
   background-position: fixed;
   background-size: cover;
@@ -42,17 +45,26 @@ text {
   border-radius: 3px;
   display: block;
   padding: 20px;
-  background-color: rgba(88, 88, 88, 0.178);
+  background-color: rgba(88, 88, 88, 0.6);
   text-align: center;
   float: left;
   overflow: hidden;
   position: fixed; 
   top: 0; 
-  box-shadow: 0 2px 8px 0 rgba(252, 252, 252, 0.267), 0 6px 14px 0 rgba(255, 255, 255, 0.192);
+  /* box-shadow: 0 2px 8px 0 rgba(252, 252, 252, 0.267), 0 6px 14px 0 rgba(255, 255, 255, 0.192); */
+  border-radius: 5px;
+  border-image: 
+  linear-gradient(
+     to right, 
+    rgba(0, 0, 0, 0.37), 
+    rgb(0, 0, 0)
+  ) 1 100%;
+  box-shadow: 0px 2px rgb(0, 0, 0), -1em 0 3em rgb(0, 0, 0);
 }
 
 #header {
   width: 800px;
+  background-color: rgba(0, 0, 0, 0.616);
   margin-left: auto;
   margin-right: auto;
   margin-top: auto;
@@ -70,7 +82,7 @@ text {
 }
 
 #welcome_text {
-  color: rgb(10, 6, 15);
+  color:antiquewhite;
   font-size: 48px;
   font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-feature-settings: "aalt";
@@ -142,8 +154,49 @@ text {
 
 #like {
   color: aliceblue;
+  border: 1px solid rgb(177, 177, 180);
+  border-radius: 5px;
+  border-image: 
+  linear-gradient(
+     to right, 
+    rgba(0, 0, 0, 0.37), 
+    rgb(0, 0, 0)
+  ) 1 100%;
+  box-shadow: 0px 3px rgb(0, 0, 0), -0.8em 0 3em rgb(0, 0, 0);
+  padding: 10px;
 }
 
 #dislike {
   color: aliceblue;
+  border: 1px solid rgb(177, 177, 180);
+  border-radius: 5px;
+  border-image: 
+  linear-gradient(
+     to right, 
+    rgba(0, 0, 0, 0.37), 
+    rgb(0, 0, 0)
+  ) 1 100%;
+  box-shadow: 0px 3px rgb(0, 0, 0), -0.8em 0 3em rgb(0, 0, 0);
+  padding: 10px;
+}
+
+#like:hover { 
+  background-color: rgba(88, 88, 88, 0.6);
+  cursor:default;
+}
+
+#dislike:hover { 
+  background-color: rgba(88, 88, 88, 0.6);
+  cursor:default;
+}
+
+#mem_title {
+  border-image: 
+  linear-gradient(
+     to right, 
+    rgba(0, 0, 0, 0.37), 
+    rgb(0, 0, 0)
+  ) 1 100%;
+  box-shadow: 0px 3px rgb(0, 0, 0), -0.8em 0 3em rgb(0, 0, 0);
+  padding: 10px;
 }
