--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,15 @@
-
 body {
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
-    background-image: url('~~../src/img/cover.jpg');
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-  }
-
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 35%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  background-image: url("~~../src/img/cover.jpg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: auto;
+}
 
 text {
   color: black;
@@ -49,16 +53,12 @@ text {
   text-align: center;
   float: left;
   overflow: hidden;
-  position: fixed; 
-  top: 0; 
+  position: fixed;
+  top: 0;
   /* box-shadow: 0 2px 8px 0 rgba(252, 252, 252, 0.267), 0 6px 14px 0 rgba(255, 255, 255, 0.192); */
   border-radius: 5px;
-  border-image: 
-  linear-gradient(
-     to right, 
-    rgba(0, 0, 0, 0.37), 
-    rgb(0, 0, 0)
-  ) 1 100%;
+  border-image: linear-gradient(to right, rgba(0, 0, 0, 0.37), rgb(0, 0, 0)) 1
+    100%;
   box-shadow: 0px 2px rgb(0, 0, 0), -1em 0 3em rgb(0, 0, 0);
 }
 
@@ -72,19 +72,15 @@ text {
   border-radius: 50px;
   border: 1px solid rgb(177, 177, 180);
   border-radius: 5px;
-  border-image: 
-  linear-gradient(
-     to right, 
-    rgba(0, 0, 0, 0.37), 
-    rgb(0, 0, 0)
-  ) 1 100%;
+  border-image: linear-gradient(to right, rgba(0, 0, 0, 0.37), rgb(0, 0, 0)) 1
+    100%;
   box-shadow: 0px 3px rgb(0, 0, 0), -0.8em 0 3em rgb(0, 0, 0);
 }
 
 #welcome_text {
-  color:antiquewhite;
+  color: antiquewhite;
   font-size: 48px;
-  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   font-feature-settings: "aalt";
 }
 
@@ -95,13 +91,9 @@ text {
   margin-right: auto;
   border: 1px solid rgb(177, 177, 180);
   border-radius: 5px;
-  border-image: 
-  linear-gradient(
-     to right, 
-    rgba(0, 0, 0, 0.37), 
-    rgb(0, 0, 0)
-  ) 1 100%;
-  box-shadow:  0px 3px rgb(0, 0, 0), -0.8em 0 3em rgb(0, 0, 0);
+  border-image: linear-gradient(to right, rgba(0, 0, 0, 0.37), rgb(0, 0, 0)) 1
+    100%;
+  box-shadow: 0px 3px rgb(0, 0, 0), -0.8em 0 3em rgb(0, 0, 0);
 }
 
 .navbutton {
@@ -113,12 +105,13 @@ text {
   padding: 15px 32px;
   text-align: center;
   font-size: 16px;
-  border: 1px solid grey
+  border: 1px solid grey;
 }
 
 .navbutton:hover {
   background-color: rgb(107, 202, 194);
-  box-shadow: 0 2px 10px 0 rgb(248, 246, 246), 0 5px 12px 0 rgba(255, 255, 255, 0.247);
+  box-shadow: 0 2px 10px 0 rgb(248, 246, 246),
+    0 5px 12px 0 rgba(255, 255, 255, 0.247);
   text-decoration: dashed;
   color: rgb(10, 17, 104);
   border: 1px solid rgb(10, 17, 104);
@@ -156,12 +149,8 @@ text {
   color: aliceblue;
   border: 1px solid rgb(177, 177, 180);
   border-radius: 5px;
-  border-image: 
-  linear-gradient(
-     to right, 
-    rgba(0, 0, 0, 0.37), 
-    rgb(0, 0, 0)
-  ) 1 100%;
+  border-image: linear-gradient(to right, rgba(0, 0, 0, 0.37), rgb(0, 0, 0)) 1
+    100%;
   box-shadow: 0px 3px rgb(0, 0, 0), -0.8em 0 3em rgb(0, 0, 0);
   padding: 10px;
 }
@@ -170,33 +159,25 @@ text {
   color: aliceblue;
   border: 1px solid rgb(177, 177, 180);
   border-radius: 5px;
-  border-image: 
-  linear-gradient(
-     to right, 
-    rgba(0, 0, 0, 0.37), 
-    rgb(0, 0, 0)
-  ) 1 100%;
+  border-image: linear-gradient(to right, rgba(0, 0, 0, 0.37), rgb(0, 0, 0)) 1
+    100%;
   box-shadow: 0px 3px rgb(0, 0, 0), -0.8em 0 3em rgb(0, 0, 0);
   padding: 10px;
 }
 
-#like:hover { 
+#like:hover {
   background-color: rgba(88, 88, 88, 0.6);
-  cursor:default;
+  cursor: default;
 }
 
-#dislike:hover { 
+#dislike:hover {
   background-color: rgba(88, 88, 88, 0.6);
-  cursor:default;
+  cursor: default;
 }
 
 #mem_title {
-  border-image: 
-  linear-gradient(
-     to right, 
-    rgba(0, 0, 0, 0.37), 
-    rgb(0, 0, 0)
-  ) 1 100%;
+  border-image: linear-gradient(to right, rgba(0, 0, 0, 0.37), rgb(0, 0, 0)) 1
+    100%;
   box-shadow: 0px 3px rgb(0, 0, 0), -0.8em 0 3em rgb(0, 0, 0);
   padding: 10px;
 }
