--- a/src/style.css
+++ b/src/style.css
@@ -64,7 +64,8 @@ text {
 
 #header {
   width: 800px;
-  background-color: rgba(0, 0, 0, 0.616);
+  background-color: rgba(0, 0, 0, 0.678);
+  cursor: pointer;
   margin-left: auto;
   margin-right: auto;
   margin-top: auto;
@@ -78,10 +79,14 @@ text {
 }
 
 #welcome_text {
-  color: antiquewhite;
+  color: rgba(250, 235, 215, 0.541);
+  cursor: default;
   font-size: 48px;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   font-feature-settings: "aalt";
+  font-style: normal;
+  font-variant: small-caps;
+  text-shadow: 2px 2px 5px #1fa4cc;
 }
 
 #content {
@@ -176,6 +181,7 @@ text {
 }
 
 #mem_title {
+  cursor: default;
   border-image: linear-gradient(to right, rgba(0, 0, 0, 0.37), rgb(0, 0, 0)) 1
     100%;
   box-shadow: 0px 3px rgb(0, 0, 0), -0.8em 0 3em rgb(0, 0, 0);
