--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,8 @@ text {
   border-radius: 5px;
   margin: 10px;
   width: 600px;
+  min-width:600px;
+  min-height: 620px;
   height: 600px;
   margin-left: auto;
   margin-right: auto;
